starting the domain driven hexagon configuration

--- a/package.json
+++ b/package.json
@@ -13,13 +13,24 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "docker:env": "docker-compose --file docker/docker-compose.yml up --build",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "jest --config .jestrc.json",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "aws:compile": "./create_lambda_zip.sh"
+    "test:e2e": "jest -i --config jest-e2e.json",
+    "aws:compile": "./create_lambda_zip.sh",
+    "migration:create": "ts-node database/migrate create --name",
+    "migration:up": "ts-node database/migrate up",
+    "migration:up:tests": "NODE_ENV=test ts-node database/migrate up",
+    "migration:down": "ts-node database/migrate down",
+    "migration:down:tests": "NODE_ENV=test ts-node database/migrate down",
+    "migration:executed": "ts-node database/migrate executed",
+    "migration:executed:tests": "NODE_ENV=test ts-node database/migrate executed",
+    "migration:pending": "ts-node database/migrate pending",
+    "migration:pending:tests": "NODE_ENV=test ts-node database/migrate pending",
+    "seed:up": "ts-node database/seed"
   },
   "dependencies": {
     "@nestjs/common": "9.1.4",
