--- a/.env.test
+++ b/.env.test
@@ -3,4 +3,4 @@ DB_HOST='localhost'
 DB_PORT=5432
 DB_USERNAME='user'
 DB_PASSWORD='password'
-DB_NAME='ddh_tests' # running tests in a separate test db
+DB_NAME='ddh_tests' # running tests in a separate test dbcontinu the
