--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/platform-express": "9.1.4",
     "aws-lambda": "1.0.6",
     "aws-serverless-express": "3.3.8",
+    "env-var": "^7.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.7"
