--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@nestjs/platform-express": "9.1.4",
     "aws-lambda": "1.0.6",
     "aws-serverless-express": "3.3.8",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "env-var": "^7.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "3.0.2",
@@ -46,6 +48,7 @@
   "devDependencies": {
     "@nestjs/cli": "9.1.4",
     "@nestjs/schematics": "9.0.3",
+    "@nestjs/swagger": "^6.1.2",
     "@nestjs/testing": "9.1.4",
     "@types/aws-lambda": "^8.10.59",
     "@types/aws-serverless-express": "^3.3.3",
