--- a/package.json
+++ b/package.json
@@ -35,12 +35,16 @@
   "dependencies": {
     "@nestjs/common": "9.1.4",
     "@nestjs/core": "9.1.4",
+    "@nestjs/cqrs": "^9.0.1",
+    "@nestjs/event-emitter": "^1.3.1",
     "@nestjs/platform-express": "9.1.4",
     "aws-lambda": "1.0.6",
     "aws-serverless-express": "3.3.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "env-var": "^7.3.0",
+    "nestjs-request-context": "^2.1.0",
+    "nestjs-slonik": "^9.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.7"
