importing the example modules

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest -i --config jest-e2e.json",
-    "aws:compile": "./create_lambda_zip.sh",
+    "aws:compile": "bash/create_lambda_zip.sh",
     "migration:create": "ts-node database/migrate create --name",
     "migration:up": "ts-node database/migrate up",
     "migration:up:tests": "NODE_ENV=test ts-node database/migrate up",
@@ -45,6 +45,7 @@
     "env-var": "^7.3.0",
     "nestjs-request-context": "^2.1.0",
     "nestjs-slonik": "^9.0.0",
+    "oxide.ts": "^1.0.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.7"
